fixing landing responsiveness on mobile

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -46,9 +46,9 @@ body {
     // box-shadow: inset 4px -4px 15px rgba(0, 0, 0, 0.3);
     width: 100%;
     height: 125vh;
-    
+
     padding: 5vh 15vw 0 15vw;
-    margin-bottom: 2vh;;
+    margin-bottom: 2vh;
     color: $weak-font-color;
     display: grid;
     grid-template-columns: 1fr 2fr 4fr;
@@ -60,16 +60,17 @@ body {
     //   ". familyimg-end jar info info"
     //   ". . . bluecircle-end bluecircle-end ";
     grid-template-areas:
-    "familyimg-start familyimg-start .  "
-    "familyimg-end jar info ";
-    
-  
-    .familyimg-start, .familyimg-end, .jar, .info {
+      "familyimg-start familyimg-start .  "
+      "familyimg-end jar info ";
+
+    .familyimg-start,
+    .familyimg-end,
+    .jar,
+    .info {
       height: 100%; /* Ensure grid items respect their row height */
       overflow: hidden; /* Prevent content from pushing the rows */
-  }
+    }
     .family {
-   
       width: 100%;
       height: 100%;
       max-width: 50vw;
@@ -82,8 +83,6 @@ body {
       width: 100%;
       height: 100%;
       border-radius: 50%;
-   
-      
     }
     // .blueCirclediv {
     //   grid-column: middle-start/bluecircle-start;
@@ -99,8 +98,7 @@ body {
     //   width: 100%;
     //   height: 100%;
     //   border-radius: 50%;
-   
-      
+
     // }
 
     .jar {
@@ -111,7 +109,7 @@ body {
       z-index: 2;
       grid-area: jar;
       animation: float 3s ease-in-out infinite;
-      justify-self: center;  /* Centers the item horizontally within the column */
+      justify-self: center; /* Centers the item horizontally within the column */
       align-self: flex-end;
       margin-bottom: 12vh;
     }
@@ -124,11 +122,11 @@ body {
     //   flex-direction: column;
     //   justify-content: flex-start;
     //   align-items: flex-start;
-     
+
     // }
-    .landingTitleSection{
+    .landingTitleSection {
       // height: 70%;
-      max-height:65vh;
+      max-height: 65vh;
       width: 100%;
       grid-area: info;
       z-index: 3;
@@ -138,7 +136,7 @@ body {
       margin-bottom: 4vh;
       // justify-content: flex-end;
       // align-items: flex-end;
-    
+
       // padding: 5vh 0;
     }
     // .grayArea{
@@ -183,7 +181,7 @@ body {
       width: 15vw;
       font-family: $font;
       font-weight: 500;
-    
+
       padding: 1vw;
       display: flex;
       justify-content: center;
@@ -221,7 +219,6 @@ body {
     font-size: 4.5vw;
     font-weight: 700;
     margin: 0;
-
   }
   .smallerTitle {
     color: $primary-color-landing;
@@ -234,7 +231,6 @@ body {
     color: $strong-font-color;
     font-size: $subtitle-font-size;
     font-weight: 600;
-    
   }
   .how {
     padding: 5vw 0;
@@ -285,7 +281,6 @@ body {
     margin: auto;
   }
   .caveats {
- 
     padding: 7vh 0;
     display: flex;
     flex-direction: column;
@@ -416,52 +411,127 @@ body {
     font-size: 3vw !important;
   }
 }
+
 @media (max-width: 600px) {
   .landingPage {
     .topSection {
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      padding: 0 15px;
-
+      height: 100vh;
+      padding: 0;
+      grid-template-columns: 1fr;
+      grid-template-rows: 95vw 50vh;
+      grid-template-areas:
+        "familyimg-start"
+        // "jar"
+        "info ";
       .family {
-        width: 150vw;
-        height: 150vw;
-        margin-left: -25%;
-        margin-top: -30%;
-        overflow: hidden;
-        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        max-width: 100vw;
+        max-height: 130vw;
+        z-index: 1;
+        overflow-x: hidden;
       }
-
-      .blueCircle {
+      .familyimg {
+        width: 150%;
+        height: auto;
+        border-radius: 0;
+        overflow: hidden;
+        margin: -25% 0 0 -20%;
+      }
+      .jar {
+        // width: 50%;
+        // height: auto;
+        // margin-bottom: -20%;
+        // align-self: flex-end;
+        // justify-self: flex-end;
         display: none;
       }
-
-      .jar {
-        margin-left: 55%;
-        margin-top: 38vw;
-        width: 40vw;
-        height: 50vw;
-        z-index: 4;
-      }
-
       .landingTopTitle {
-        font-size: 22vw;
-        line-height: 20vw;
-        margin-bottom: 15px;
+        margin: 0;
+        padding: 0;
+        font-size: 23vw;
+        line-height: 22vw;
+        font-weight: 1000;
       }
-
       .landingTopSubTitle {
-        font-size: 4vw;
-        margin-bottom: 5px;
+        font-size: 6vw;
+        margin-bottom: 1vh;
+      }
+      .grayArea{
+        padding: 5vw;
       }
 
       .landingTopPhrase {
-        font-size: 3.5vw;
+        font-size: 4vw !important;
         margin-bottom: 5px;
       }
+      .loginButton{
+        margin-top: 1vh;
+        font-size: 4vw;
+        max-height: 9vw;
+        padding: 5vw;
+        width: 40%;
+        
+       
+      }
+  
+      .final{
+        .loginButton{
+          margin-top: 1vh;
+          font-size: 4vw;
+          max-height: 9vw;
+          padding: 5vw;
+          width: 50vw !important ;
+          
+         
+        }
+
+      }
     }
+    // .topSection {
+    //   width: 100%;
+    //   display: flex;
+    //   flex-direction: column;
+    //   overflow: hidden;
+    //   padding: 0 15px;
+
+    //   .family {
+    //     width: 150vw;
+    //     height: 150vw;
+
+    //     overflow: hidden;
+    //     object-fit: cover;
+    //   }
+
+    //   .blueCircle {
+    //     display: none;
+    //   }
+
+    //   .jar {
+    //     margin-left: 55%;
+    //     margin-top: 38vw;
+    //     width: 40vw;
+    //     height: 50vw;
+    //     z-index: 4;
+    //   }
+
+    //   .landingTopTitle {
+    //     font-size: 22vw;
+    //     line-height: 20vw;
+    //     margin-bottom: 15px;
+    //   }
+
+    //   .landingTopSubTitle {
+    //     font-size: 4vw;
+    //     margin-bottom: 5px;
+    //   }
+
+    //   .landingTopPhrase {
+    //     font-size: 3.5vw;
+    //     margin-bottom: 5px;
+    //   }
+    // }
 
     .middle {
       flex-direction: column;
@@ -526,9 +596,7 @@ body {
       font-size: 10vw;
     }
     .final {
-      .loginButton {
-        font-size: 3vw;
-      }
+    
       .paragraph {
         width: 80%;
         font-size: 3.5vw;
